--- a/Superhero-Sightings/src/main/resources/application.properties
+++ b/Superhero-Sightings/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=7474
 
+spring.datasource.url=jdbc:mysql://localhost:3306/superhero_sightings
+spring.datasource.username=root
+spring.datasource.password=ilikeMYSQL2
